blender crashes after adding texture node to compositing tree #49857

Closed
opened 2016-10-27 17:37:25 +02:00 by Joel Meyer · 14 comments

System Information
System 1: Windows 10 with NVIDIA GTX1070
System 2: Windows 10 with Intel HD4000

Blender Version
Broken: 2.78a (e8299c8); also tested daily build 2.78 10a25b6
Worked: 2.78

Short description of error
Directly after adding a texture node to the compositing node tree blender crashes.

Exact steps for others to reproduce the error
Start up blender, open a node editor (independent of rendering engine), enable "Use Nodes" and add a input>texture node (with menu, shortcut or searchbar, it doesn't matter).

The console says: Error: EXCEPTION_ACCESS_VIOLATION

**System Information** System 1: Windows 10 with NVIDIA GTX1070 System 2: Windows 10 with Intel HD4000 **Blender Version** Broken: 2.78a (e8299c8); also tested daily build 2.78 10a25b6 Worked: 2.78 **Short description of error** Directly after adding a texture node to the compositing node tree blender crashes. **Exact steps for others to reproduce the error** Start up blender, open a node editor (independent of rendering engine), enable "Use Nodes" and add a input>texture node (with menu, shortcut or searchbar, it doesn't matter). The console says: `Error: EXCEPTION_ACCESS_VIOLATION`
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sirjofri

Added subscriber: @sirjofri
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Sergey Sharybin was assigned by Ray molenkamp 2016-10-27 18:37:46 +02:00
Member

Caused by the fix for #49789 (m_texture is null)

Caused by the fix for #49789 (m_texture is null)

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Added subscriber: @BartekMoniewski

Added subscriber: @BartekMoniewski

This issue was referenced by 534f11f71e

This issue was referenced by 534f11f71ee71b87a17ceddf56da0bcfa2cab352

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Trispona

Added subscriber: @Trispona

Added subscriber: @tashtego

Added subscriber: @tashtego

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

It's still here
Adding Texture Node in compositor crashes blender

Archlinux
Blender version 2.78a

cat /tmp/blender.crash.txt
# Blender 2.78 (sub 0), Commit date: 2016-10-24 12:20, Hash e8299c8100
bpy.context.space_data.tree_type = 'CompositorNodeTree'  # Property
bpy.context.scene.use_nodes = True  # Property
bpy.ops.node.add_node(type="CompositorNodeTexture", use_transform=True)  # Operator

# backtrace
blender(BLI_system_backtrace+0x30) [0x140f9b0]
blender() [0xa43869]
/usr/lib/libc.so.6(+0x330b0) [0x7f8dd2bb10b0]
blender(_ZN20TextureBaseOperation19executePixelSampledEPfff12PixelSampler+0x98) [0x10807a8]
blender(_ZN16PreviewOperation13executeRegionEP4rctij+0x23b) [0x10841db]
blender(_ZN9CPUDevice7executeEP11WorkPackage+0x7a) [0x106122a]
blender(_ZN13WorkScheduler18thread_execute_cpuEPv+0x2d) [0x106020d]
/usr/lib/libpthread.so.0(+0x7454) [0x7f8dd3127454]
/usr/lib/libc.so.6(clone+0x5f) [0x7f8dd2c667df]
It's still here Adding Texture Node in compositor crashes blender Archlinux Blender version 2.78a ``` cat /tmp/blender.crash.txt # Blender 2.78 (sub 0), Commit date: 2016-10-24 12:20, Hash e8299c8100 bpy.context.space_data.tree_type = 'CompositorNodeTree' # Property bpy.context.scene.use_nodes = True # Property bpy.ops.node.add_node(type="CompositorNodeTexture", use_transform=True) # Operator # backtrace blender(BLI_system_backtrace+0x30) [0x140f9b0] blender() [0xa43869] /usr/lib/libc.so.6(+0x330b0) [0x7f8dd2bb10b0] blender(_ZN20TextureBaseOperation19executePixelSampledEPfff12PixelSampler+0x98) [0x10807a8] blender(_ZN16PreviewOperation13executeRegionEP4rctij+0x23b) [0x10841db] blender(_ZN9CPUDevice7executeEP11WorkPackage+0x7a) [0x106122a] blender(_ZN13WorkScheduler18thread_execute_cpuEPv+0x2d) [0x106020d] /usr/lib/libpthread.so.0(+0x7454) [0x7f8dd3127454] /usr/lib/libc.so.6(clone+0x5f) [0x7f8dd2c667df] ```

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Sorry, but we don't have time machine to. Blender 2.78a was releases 24 Oct, the fix was committed 3 Nov.

It'll be in 2.78b update we're planning to do today tho.

Sorry, but we don't have time machine to. Blender 2.78a was releases 24 Oct, the fix was committed 3 Nov. It'll be in 2.78b update we're planning to do today tho.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49857
No description provided.