Fix T49857: Blender crashes after adding texture node to compositing tree